Modifications according to andrea comment

--- a/default.html
+++ b/default.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="site/style.css">
   </head>
   <body>
-    <a href="start.html">
+    <a href="default.html">
       <img src="img/logo.png">
     </a>
     <nav class="navBar">
@@ -22,6 +22,7 @@
       <h1 class="w3-wide w3-center"> Leitbild</h1>
       <p class="w3-opacity">
         Willkommen auf der Website des TuS Köln-Merkenich 2009 e.V.!</p>
+        <img src="img/home_flags.jpg" id="responsize-image">
 	    <p>
 	    Wir bieten Breitensport in familiärer Atmosphäre für
       junge und jung gebliebene ältere Mitbürger.
@@ -32,11 +33,6 @@
       Beiträgen bei gleichzeitig gesunden Bilanzen.
       </i>
       </p>
-      <figure id="gallery">
-        <figure> <img src="img/segeln_arbeit_busgruppe.jpg" id="responsize-image"> </figure>
-        <figure> <img src="img/uebersicht_hafen.jpg" id="responsize-image"> </figure>
-        <figure> <img src="img/segeln_delfin_action.jpg" id="responsize-image"> </figure>
-      </figure>
     </section>
 
     <section>
