--- a/site/delfin_album.html
+++ b/site/delfin_album.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <a href="start.html">
+    <a href="../default.html">
       <img src="../img/logo.png">
     </a>
     <nav class=navBar>
@@ -44,7 +44,7 @@
       <figure id="gallery">
         <figure> <img src="../img/delfin2.jpg" id="responsize-image"> </figure>
         <figure> <img src="../img/delfin3.jpg" id="responsize-image"> </figure>
-        <figure> <img src="../img/segeln_delfin_innen.jpg" id="responsize-image"> </figure>
+        <figure> <img src="../img/segeln_arbeit_busgruppe.jpg" id="responsize-image"> </figure>
         <figure> <img src="../img/segeln_delfin_action.jpg" id="responsize-image"> </figure>
         <figure> <img src="../img/segeln_arbeit_an_land_2.jpg" id="responsize-image"> </figure>
       </figure>
