--- a/site/geschaeftsordnung.html
+++ b/site/geschaeftsordnung.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <a href="start.html">
+    <a href="../default.html">
       <img src="../img/logo.png">
     </a>
     <nav class=navBar>
@@ -27,7 +27,7 @@
 	<section>
     <p>
       Die Geschäftsordnung des TuS Köln-Merkenich 2009 e.V. kann hier heruntergeladen
-      werden : <a href="../doc/Satzung_tus_merkenich.pdf" download>
+      werden: <a href="../doc/Satzung_tus_merkenich.pdf" download>
         Satzung des Vereins
       </a> 
   </section>
