--- a/site/gymnastik.html
+++ b/site/gymnastik.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <a href="start.html">
+    <a href="../default.html">
       <img src="../img/logo.png">
     </a>
     <nav class=navBar>
@@ -26,10 +26,10 @@
   <section>
     <p>
       Die größte Sparte des TuS Köln-Merkenich ist die Gymnastik-Sparte mit der
-      Spartenleiterin Anita Lenarz. Die verschiedenen Angeboten finden sind im Folgenden
+      Spartenleiterin Anita Lenarz. Die verschiedenen Angeboten sind im Folgenden
       beschrieben.
-      <h1 class="w3-wide w3-center"> Mutter und Kind Turnen</h1>
-      Mutter und Kind Turnen bietet schon den kleinstet der
+      <h1 class="w3-wide w3-center"> Eltern und Kind Turnen</h1>
+      Eltern und Kind Turnen bietet schon den kleinstet der
       Kleinen Bewegungmöglichkeiten mit erfahrenen Übungsleitern
       an, ohne auf die vertrautet Bezugsperson Vater oder Mutter zu verzichten.
       Die Übungen sollen die motorischen Fähigkeiten fördern und fordern ohne zu überfordern.
