--- a/site/home.html
+++ b/site/home.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <a href="start.html">
+    <a href="../default.html">
       <img src="../img/logo.png">
     </a>
     <nav class=navBar>
@@ -21,7 +21,7 @@
   <section>
     <h1 class="w3-wide w3-center"> Vorstellung Verein</h1>
     <p>
-      Unser Verein wurde im Spätjahr 2009 gegründet um den Sparten Gymnastik,
+      Unser Verein wurde im Jahr 2009 gegründet um den Sparten Gymnastik,
       Segeln und Wandern, 
       die sich aus der Organisation des SV-Köln-Merkenich 1921 e.V. lösen wollten eine neue 
       sportliche Heimat zu bieten. Aus organisatorischen Gründen konnten wir jedoch erst am 1. 
