--- a/site/segeln.html
+++ b/site/segeln.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <a href="start.html">
+    <a href="../default.html">
       <img src="../img/logo.png">
     </a>
     <nav class=navBar>
@@ -51,12 +51,12 @@
       <p class="w3-opacity">
 		  Gesegelt wird mit zwei Booten: <br>
 		
-      <table>
+      <table max-width="100%">
       <tr>
         <th width=200> </th>    
-        <th> <a href="#"> <img src="../img/delfin.jpg" height = "250"> </a> </th>
+        <th width="40%"> <a href="#"> <img src="../img/delfin.jpg" width="100%" > </a> </th>
         <th width = 25> </th>
-        <th> <a href="#"> <img src="../img/ilmatar.jpg" height = "250"> </a> </th>
+        <th width="40%"> <a href="#"> <img src="../img/ilmatar.jpg" width="100%"> </a> </th>
       </tr>
       <tr>
         <td>Typ</td>
