--- a/site/wandern.html
+++ b/site/wandern.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <a href="start.html">
+    <a href="../default.html">
       <img src="../img/logo.png">
     </a>
     <nav class=navBar>
@@ -25,7 +25,7 @@
       <a href="#"class="w3-button w3-bar-item">Kontakt</a>
     </nav>
     <section>
-        Die Sparte Wandern besteht nun schon fast seit 25 Jahren.
+        Die Sparte Wandern besteht nun schon seit fast 25 Jahren.
         Hervorgegangen ist sie aus einer
         Gruppe Wanderfreunden um Ludwig Auhuber und Jutta Meyer, die sich anfangs ganz privat
         zusammen trafen um Wanderungen in der näheren und
