--- a/site/wandern_album.html
+++ b/site/wandern_album.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <a href="start.html">
+    <a href="../default.html">
       <img src="../img/logo.png">
     </a>
     <nav class="navBar">
