First modifications after published

--- a/site/gymnastik_kursangebot.html
+++ b/site/gymnastik_kursangebot.html
@@ -26,11 +26,14 @@
 		<h1 class="w3-wide w3-center"> Kursangebot Gymnastik </h1>
 		<p class="w3-opacity">
 		Die Kurse finden in der Sporthalle der GS Spörkelhof statt. <br>
-		Ansprechpartner: Frau Lenarz - 0221 705774 </p>
+		Ansprechpartner: Frau Lenarz - 0221 705774 <br>
+    eMail an : Hansjörg Schneider - <a href = "mailto:
+    hansjoerg.schneider@tuskoelnmerkenich.de">hansjoerg.schneider@tuskoelnmerkenich.de</a>
+    </p>
 		<h2> Kinderzirkus </h2>
 		<p class="w3-opacity">
 		Mo 16:00 bis 18:00 </p>
-		<h2> Mutter und Kind Turnen </h2>
+		<h2> Eltern und Kind Turnen </h2>
 		<p class="w3-opacity">
 		Di 16:15 bis 17:15 <br>
 		Di 17:15 bis 18:15 </p>
