--- a/site/wandern.html
+++ b/site/wandern.html
@@ -22,12 +22,12 @@
     <nav class=navBar2>
       <a href="wandern_album.html"class="w3-button w3-bar-item">Album</a>
       <a href="wandern_termine.html"class="w3-button w3-bar-item">Termine</a>
-      <a href="#"class="w3-button w3-bar-item">Kontakt</a>
+      <a href="wandern_kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
     </nav>
     <section>
         Die Sparte Wandern besteht nun schon seit fast 25 Jahren.
         Hervorgegangen ist sie aus einer
-        Gruppe Wanderfreunden um Ludwig Auhuber und Jutta Meyer, die sich anfangs ganz privat
+        Gruppe Wanderfreunden, die sich anfangs ganz privat
         zusammen trafen um Wanderungen in der näheren und
         weiteren Umgebung Kölns zu unternehmen.
         <br>
