--- a/site/wandern_kontakt.html
+++ b/site/wandern_kontakt.html
@@ -18,16 +18,20 @@
       <a href="kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
       <a href="impressum.html"class="w3-button w3-bar-item">Rechtliches</a>
     </nav>
+    <p></p>
     <nav class=navBar2>
-        <a href="impressum.html"class="w3-button w3-bar-item">Impressum</a>
-        <a href="datenschutz.html"class="w3-button w3-bar-item">Datenschutz</a>
+      <a href="wandern_album.html"class="w3-button w3-bar-item">Album</a>
+      <a href="wandern_termine.html"class="w3-button w3-bar-item">Termine</a>
+      <a href="wandern_kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
     </nav>
-	<p></p>
-    Impressum
-    TuS Köln Merkenich 2009
-    <i>...</i><br>
-    <i>Adresse</i><br>
-    <i>Vereinsregister</i><br>
+    <section>
+    <h1 class="w3-wide w3-center"> Ansprechpartner</h1>
+    <p>
+      Hans Henke <br>
+      eMail:  <a href = "mailto:
+      hans.henke@tuskoelnmerkenich.de">hans.henke@tuskoelnmerkenich.de</a>
+    </p>
+    </section>
   </body>
   <footer>&copy; 2019 TuS Merkenich 2009 e.V.</footer>
 </html>
