--- a/site/wandern_termine.html
+++ b/site/wandern_termine.html
@@ -22,7 +22,7 @@
     <nav class=navBar2>
       <a href="wandern_album.html"class="w3-button w3-bar-item">Album</a>
       <a href="wandern_termine.html"class="w3-button w3-bar-item">Termine</a>
-      <a href="#"class="w3-button w3-bar-item">Kontakt</a>
+      <a href="wandern_kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
     </nav>
     <section>
 <table cellspacing="0" border="0">
