--- a/default.html
+++ b/default.html
@@ -37,7 +37,9 @@
 
     <section>
       <h1 class="w3-wide w3-center"> Aktuelles</h1>
-      <p class="w3-opacity"> Zurzeit keine neuen Nachrichten </p>
+      <p class="w3-opacity"> Unsere Jahreshauptversammlung findet am 26.03.2020 um 19:00
+Uhr im Pfarrheim Merkenich statt. Eingeladen sind alle Mitglieder, die das 18. Lebensjahr
+vollendet haben. Einladungen mit der Tagesordnung werden noch versendet </p>
     </section>
   
    
