Added eMail address

--- a/site/impressum.html
+++ b/site/impressum.html
@@ -30,7 +30,8 @@
     50769 Köln, Jungbluthstraße 19
     <h1 class="w3-wide w3-center"> Vorstandsvorsitzender</h1>
     Hansjörg Schneider <br>
-    eMail :
+    eMail : <a href = "mailto: 
+      hansjoerg.schneider@tuskoelnmerkenich.de">hansjoerg.schneider@tuskoelnmerkenich.de</a> 
     <h1 class="w3-wide w3-center"> Registergericht</h1>
     Amtsgericht Köln
     <h1 class="w3-wide w3-center"> Registernummer</h1>
