Updates due to corona

--- a/default.html
+++ b/default.html
@@ -18,6 +18,18 @@
       <a href="site/kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
       <a href="site/impressum.html"class="w3-button w3-bar-item">Rechtliches</a>
     </nav>
+
+    <section>
+      <h1 class="w3-wide w3-center"> Aktuelles</h1>
+      <p class="w3-opacity"> 
+        Unsere Jahreshauptversammlung, geplant für den 26.03.2020, wurde aus aktuellem Anlass auf unbestimmte Zeit
+        verschoben. Der neue Termin wird bekannt gegeben. <br>
+        <br>
+        Aufgrund der Hallenschließungen finden keine Veranstaltungen in der Sporthalle
+        Spoerkelhof Straße statt. Alle betroffenen Veranstaltungen fallen aus.
+      </p>
+    </section>
+  
     <section>
       <h1 class="w3-wide w3-center"> Leitbild</h1>
       <p class="w3-opacity">
@@ -35,13 +47,6 @@
       </p>
     </section>
 
-    <section>
-      <h1 class="w3-wide w3-center"> Aktuelles</h1>
-      <p class="w3-opacity"> Unsere Jahreshauptversammlung findet am 26.03.2020 um 19:00
-Uhr im Pfarrheim Merkenich statt. Eingeladen sind alle Mitglieder, die das 18. Lebensjahr
-vollendet haben. Einladungen mit der Tagesordnung werden noch versendet </p>
-    </section>
-  
    
 	<footer>&copy; 2019 TuS Merkenich 2009 e.V.</footer>
     <script src="app.js"></script>
