--- a/site/wandern_termine.html
+++ b/site/wandern_termine.html
@@ -43,13 +43,13 @@
 		<td align="center" sdnum="1033;0;DD/MM/YY;@"><br></td>
 	</tr>
 	<tr>
-		<td height="19" align="left" sdnum="1033;0;@"><font face="AvantGarde Md BT">29. März</font></td>
+		<td height="19" align="left" sdnum="1033;0;@"><font face="AvantGarde Md BT">29. März<br></font></td>
 		<td align="left"><font face="AvantGarde Md BT"><br></font></td>
 		<td align="left"><b><u><font face="AvantGarde Md BT" size=3>Am Rhein zwischen Merkenich und Hitdorf</font></u></b></td>
 		<td align="center" sdnum="1033;1033;M/D/YYYY"><font face="AvantGarde Md BT"><br></font></td>
 	</tr>
 	<tr>
-		<td height="19" align="right" sdnum="1033;0;@"><font face="AvantGarde Md BT"><br></font></td>
+		<td height="19" align="right" sdnum="1033;0;@"><font face="AvantGarde Md BT"><b>ABGESAGT</b><br></font></td>
 		<td align="left"><font face="AvantGarde Md BT"><br></font></td>
 		<td align="left"><font face="AvantGarde Md BT">Rundwanderung am Rhein; ca. 11 km, leicht</font></td>
 		<td align="center"><font face="AvantGarde Md BT"><br></font></td>
@@ -85,7 +85,7 @@
 		<td align="center" sdnum="1033;0;DD/MM/YY;@"><br></td>
 	</tr>
 	<tr>
-		<td height="19" align="left" sdnum="1033;0;@"><font face="AvantGarde Md BT"><br></font></td>
+		<td height="19" align="right" sdnum="1033;0;@"><font face="AvantGarde Md BT"><b>ABGESAGT</b><br></font></td>
 		<td align="left"><font face="AvantGarde Md BT" size=3><br></font></td>
 		<td align="left"><font face="AvantGarde Md BT">Rundwanderung bei Mettmann, ca 9 km</font></td>
 		<td align="center" sdnum="1033;0;DD/MM/YY;@"><br></td>
