Adds further section on Holzleiste

--- a/default.html
+++ b/default.html
@@ -26,7 +26,12 @@
         verschoben. Der neue Termin wird bekannt gegeben. <br>
         <br>
         Aufgrund der Hallenschließungen finden keine Veranstaltungen in der Sporthalle
-        Spoerkelhof Straße statt. Alle betroffenen Veranstaltungen fallen aus.
+        Spoerkelhof Straße statt. Alle betroffenen Veranstaltungen fallen aus. <br>
+        <br>
+        <b> Arbeiten an der Delfin</b><br>
+        Die Vereinsmitglieder der Delfin waren dieses Jahr schon aktiv und haben eine neue
+Holzleiste angebracht. Hier geht es weiter zur Bildergalerie <a
+href="site/delfin_album.html">Delfin Frühjahrsarbeiten</a>
       </p>
     </section>
   
