Fixes bug for ilmatar images and improves color for visited menu links

--- a/site/ilmatar_album.html
+++ b/site/ilmatar_album.html
@@ -42,46 +42,46 @@
     <section>
       <h1 class="w3-wide w3-center"> Eindrücke Ilmatar</h1>
       <div class="slideshow-container">
-        <div class="mySlides fade">
+        <div name="mainSlide" class="mySlides fade">
           <div class="numbertext">1 / 5</div>
           <img src="../img/ilmatar_innen1.jpeg" style="width:100%">
           <div class="text">Ilmatar Innen</div>
         </div>
-        <div class="mySlides fade">
+        <div name="mainSlide" class="mySlides fade">
           <div class="numbertext">2 / 5</div>
           <img src="../img/ilmatar_schleuse.jpeg" style="width:100%">
           <div class="text">Action in der Schleuse</div>
         </div>
-        <div class="mySlides fade">
+        <div name="mainSlide" class="mySlides fade">
           <div class="numbertext">3 / 5</div>
           <img src="../img/ilmatar_innen2.jpeg" style="width:100%">
           <div class="text">Ilmatar Innen</div>
         </div>
-        <div class="mySlides fade">
+        <div name="mainSlide" class="mySlides fade">
           <div class="numbertext">4 / 5</div>
           <img src="../img/ilmatar.jpg" style="width:100%">
           <div class="text">Im Hafen</div>
         </div>
-        <div class="mySlides fade">
+        <div name="mainSlide" class="mySlides fade">
           <div class="numbertext">5 / 5</div>
           <img src="../img/ilmatar_innen3.jpeg" style="width:100%">
-          <div class="text">Ilmatara Innen</div>
+          <div class="text">Ilmatar Innen</div>
         </div>
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        <a class="prev" onclick="plusSlides(-1, 'mainSlide', 'mainDot')">&#10094;</a>
+        <a class="next" onclick="plusSlides(1, 'mainSlide', 'mainDot')">&#10095;</a>
       </div>
       <br>
 
       <div style="text-align:center">
-        <span class="dot" onclick="currentSlide(1)"></span>
-        <span class="dot" onclick="currentSlide(2)"></span>
-        <span class="dot" onclick="currentSlide(3)"></span>
-        <span class="dot" onclick="currentSlide(4)"></span>
-        <span class="dot" onclick="currentSlide(5)"></span>
+        <span name="mainDot" class="dot" onclick="currentSlide(1, 'mainSlide', 'mainDot')"></span>
+        <span name="mainDot" class="dot" onclick="currentSlide(2, 'mainSlide', 'mainDot')"></span>
+        <span name="mainDot" class="dot" onclick="currentSlide(3, 'mainSlide', 'mainDot')"></span>
+        <span name="mainDot" class="dot" onclick="currentSlide(4, 'mainSlide', 'mainDot')"></span>
+        <span name="mainDot" class="dot" onclick="currentSlide(5, 'mainSlide', 'mainDot')"></span>
       </div>
 
     </section>	
   </body>
   <footer>&copy; 2019 TuS Merkenich 2009 e.V.</footer>
-  <script src="slides.js"></script>
+  <script src="slidesSingle.js"></script>
 </html>
