Adds several photos and fixes redirect bug for www

--- a/site/ilmatar_album.html
+++ b/site/ilmatar_album.html
@@ -43,27 +43,37 @@
       <h1 class="w3-wide w3-center"> Eindrücke Ilmatar</h1>
       <div class="slideshow-container">
         <div name="mainSlide" class="mySlides fade">
-          <div class="numbertext">1 / 5</div>
+          <div class="numbertext">1 / 7</div>
           <img src="../img/ilmatar_innen1.jpeg" style="width:100%">
           <div class="text">Ilmatar Innen</div>
         </div>
         <div name="mainSlide" class="mySlides fade">
-          <div class="numbertext">2 / 5</div>
+          <div class="numbertext">2 / 7</div>
+          <img src="../img/ilmatar_aus_der_weite.jpg" style="width:100%">
+          <div class="text">Ilmatar auf offener See</div>
+        </div>
+        <div name="mainSlide" class="mySlides fade">
+          <div class="numbertext">3 / 7</div>
           <img src="../img/ilmatar_schleuse.jpeg" style="width:100%">
           <div class="text">Action in der Schleuse</div>
         </div>
         <div name="mainSlide" class="mySlides fade">
-          <div class="numbertext">3 / 5</div>
+          <div class="numbertext">4 / 7</div>
+          <img src="../img/ilmatar_aus_der_weite_2.jpg" style="width:100%">
+          <div class="text">Ilmatar aus sicherer Entfernung</div>
+        </div>
+        <div name="mainSlide" class="mySlides fade">
+          <div class="numbertext">5 / 7</div>
           <img src="../img/ilmatar_innen2.jpeg" style="width:100%">
           <div class="text">Ilmatar Innen</div>
         </div>
         <div name="mainSlide" class="mySlides fade">
-          <div class="numbertext">4 / 5</div>
+          <div class="numbertext">6 / 7</div>
           <img src="../img/ilmatar.jpg" style="width:100%">
           <div class="text">Im Hafen</div>
         </div>
         <div name="mainSlide" class="mySlides fade">
-          <div class="numbertext">5 / 5</div>
+          <div class="numbertext">7 / 7</div>
           <img src="../img/ilmatar_innen3.jpeg" style="width:100%">
           <div class="text">Ilmatar Innen</div>
         </div>
@@ -78,6 +88,8 @@
         <span name="mainDot" class="dot" onclick="currentSlide(3, 'mainSlide', 'mainDot')"></span>
         <span name="mainDot" class="dot" onclick="currentSlide(4, 'mainSlide', 'mainDot')"></span>
         <span name="mainDot" class="dot" onclick="currentSlide(5, 'mainSlide', 'mainDot')"></span>
+        <span name="mainDot" class="dot" onclick="currentSlide(6, 'mainSlide', 'mainDot')"></span>
+        <span name="mainDot" class="dot" onclick="currentSlide(7, 'mainSlide', 'mainDot')"></span>
       </div>
 
     </section>	
