--- a/site/segeln.html
+++ b/site/segeln.html
@@ -26,7 +26,7 @@
 		</button>
 		<div class="dropdown-content">
 			<a href="delfin_album.html">Album</a>
-			<a href="#">Kontakt</a>
+			<a href="delfin_kontakt.html">Kontakt</a>
 		</div>
 	  </div>
 	  <div class="dropdown">
@@ -35,7 +35,7 @@
 		</button>
 		<div class="dropdown-content">
 			<a href="ilmatar_album.html">Album</a>
-			<a href="#">Kontakt</a>
+			<a href="ilmatar_kontakt.html">Kontakt</a>
 		</div>
 	  </div>
     </nav>
