Adds Kölle Aktiv und neuigkeit Wiedereröffnung der Halle

--- a/default.html
+++ b/default.html
@@ -22,11 +22,21 @@
     <section>
       <h1 class="w3-wide w3-center"> Aktuelles</h1>
       <p class="w3-opacity"> 
+        <b> WIEDERAUFNAHME DES HALLENBETRIEBES </b><br>
+        Nachdem unser Sportangebot nun einige Zeit lang ruhen musste, sind wir glücklich
+zur verkünden, dass die Sporthalle ab dem <b>17.08.2020</b> unter Berücksichtigung der
+aktuellen Hygienevorschriften wieder genutzt werden kann. Wir freuen uns euch bald wieder
+zu sehen!<br>
+        <br>
+        Der TuS macht dieses Jahr bei der Aktion 'Kölle aktiv' mit und bietet in diesem
+Rahmen Sportangebote für jederman an!
+        <br>
+        <a href="https://www.koelle-aktiv.de">
+          <img src="img/koelle_aktiv.jpg" width="100" height="100">
+        </a>
+        <br> 
         Unsere Jahreshauptversammlung, geplant für den 26.03.2020, wurde aus aktuellem Anlass auf unbestimmte Zeit
         verschoben. Der neue Termin wird bekannt gegeben. <br>
-        <br>
-        Aufgrund der Hallenschließungen finden keine Veranstaltungen in der Sporthalle
-        Spoerkelhof Straße statt. Alle betroffenen Veranstaltungen fallen aus. <br>
         <br>
         <b> Arbeiten an der Delfin</b><br>
         Die Vereinsmitglieder der Delfin waren dieses Jahr schon aktiv und haben eine neue
