--- a/default.html
+++ b/default.html
@@ -22,23 +22,23 @@
     <section>
       <h1 class="w3-wide w3-center"> Aktuelles</h1>
       <p class="w3-opacity"> 
-        <b> WIEDERAUFNAHME DES HALLENBETRIEBES </b><br>
-        Nachdem unser Sportangebot nun einige Zeit lang ruhen musste, sind wir glücklich
-zur verkünden, dass die Sporthalle ab dem <b>17.08.2020</b> unter Berücksichtigung der
-aktuellen Hygienevorschriften wieder genutzt werden kann. Wir freuen uns euch bald wieder
-zu sehen!<br>
+        <h3>Weihnachtsbrief </h3>
+        <iframe src="./doc/weihnachtsgruss_2020.pdf" width="100%" height="500px"> </iframe>
+        <h3>Unterbrechung des Hallenbetriebes </h3>
+        Der Hallenbetrieb ist nach wie vor aufgrund der aktuellen Maßnahmen nicht möglich.
+        Wir geben Bescheid, wenn der Sportbetrieb wieder möglich ist.<br>
         <br>
-        Der TuS macht dieses Jahr bei der Aktion 'Kölle aktiv' mit und bietet in diesem
-Rahmen Sportangebote für jederman an!
+        <h3>Kölle aktiv</h3>
+        Nach der Teilnahme im Jahr 2020, werden wir aller Vorraussicht nach auch im
+kommenden Jahr bei dieser schönen Initiative teilnehmen. Weitere Infos findet ihr auf:
         <br>
         <a href="https://www.koelle-aktiv.de">
           <img src="img/koelle_aktiv.jpg" width="100" height="100">
         </a>
         <br> 
-        Unsere Jahreshauptversammlung, geplant für den 26.03.2020, wurde aus aktuellem Anlass auf unbestimmte Zeit
-        verschoben. Der neue Termin wird bekannt gegeben. <br>
         <br>
-        <b> Arbeiten an der Delfin</b><br>
+        <br>
+        <h3>Arbeiten an der Delfin</h3>
         Die Vereinsmitglieder der Delfin waren dieses Jahr schon aktiv und haben eine neue
 Holzleiste angebracht. Hier geht es weiter zur Bildergalerie <a
 href="site/delfin_album.html">Delfin Frühjahrsarbeiten</a>
