Removes christmas greetings, adds fitkoeln and info

--- a/default.html
+++ b/default.html
@@ -22,15 +22,24 @@
     <section>
       <h1 class="w3-wide w3-center"> Aktuelles</h1>
       <p class="w3-opacity"> 
-        <h3>Weihnachtsbrief </h3>
-        <iframe src="./doc/weihnachtsgruss_2020.pdf" width="100%" height="500px"> </iframe>
-        <h3>Unterbrechung des Hallenbetriebes </h3>
-        Der Hallenbetrieb ist nach wie vor aufgrund der aktuellen Maßnahmen nicht möglich.
-        Wir geben Bescheid, wenn der Sportbetrieb wieder möglich ist.<br>
-        <br>
+        <h3> Beitragseinzug </h3>
+        Liebe Mitglieder,<br>
+        zum 22.02.2021 werden wir die regulären Beiträge für das Jahr 2021 einziehen.
+        Der Vorstand bedankt sich dafür, dass unsere Mitglieder uns weiterhin die Treue halten
+        und wir hoffen, bald den Sportbetrieb wieder aufnehmen zu können.<br>
+        Bis dahin, alles Gute und bleibt gesund<br>
+        Der Vorstand
+        <h3>SPORT@Home</h3>
+        Für alle die auch in den aktuellen Zeiten aktiv mit anderen bleiben möchten,
+bietet die Initiative von fit.Koeln momentan ein tollen gratis Angebot für jederman. <br>
+        Insbesondere wollen wir auf die SPORT@HOME Angebote hinweisen. Weiter
+Informationen findet ihr unter <a href="https://www.fit-koeln.de">fit.koeln</a>.<br>
+        <a href="https://www.fit-koeln.de">
+          <img src="img/fitkoeln.png" width="200">
+        </a>
         <h3>Kölle aktiv</h3>
         Nach der Teilnahme im Jahr 2020, werden wir aller Vorraussicht nach auch im
-kommenden Jahr bei dieser schönen Initiative teilnehmen. Weitere Infos findet ihr auf:
+kommenden Jahr bei dieser schönen Initiative teilnehmen. Weitere Infos findet ihr unter:
         <br>
         <a href="https://www.koelle-aktiv.de">
           <img src="img/koelle_aktiv.jpg" width="100" height="100">
