--- a/default.html
+++ b/default.html
@@ -22,6 +22,13 @@
     <section>
       <h1 class="w3-wide w3-center"> Aktuelles</h1>
       <p class="w3-opacity"> 
+        <h3> Nordic Walking</h3>
+        Liebe Mitglieder,<br>
+        Seit einigen Tagen lacht uns die Sonne wieder an und das soll ausgenutzt werden.
+        Deshalb bieten wir montags jetzt Nordic Walking für alle an. Wir treffen uns um
+        18:00 und sind dann etwa bis 19:30 unterwegse.
+        Wir freuen uns auf eure Teilnahme<br>
+        Der Vorstand
         <h3> Beitragseinzug </h3>
         Liebe Mitglieder,<br>
         zum 22.02.2021 werden wir die regulären Beiträge für das Jahr 2021 einziehen.
