Adds Gymnastikkurse und update koelle aktive

--- a/default.html
+++ b/default.html
@@ -22,20 +22,46 @@
     <section>
       <h1 class="w3-wide w3-center"> Aktuelles</h1>
       <p class="w3-opacity"> 
-        <h3> Nordic Walking</h3>
-        Liebe Mitglieder,<br>
-        Seit einigen Tagen lacht uns die Sonne wieder an und das soll ausgenutzt werden.
-        Deshalb bieten wir montags jetzt Nordic Walking für alle an. Wir treffen uns um
-        18:00 und sind dann etwa bis 19:30 unterwegse.
-        Wir freuen uns auf eure Teilnahme<br>
-        Der Vorstand
-        <h3> Beitragseinzug </h3>
-        Liebe Mitglieder,<br>
-        zum 22.02.2021 werden wir die regulären Beiträge für das Jahr 2021 einziehen.
-        Der Vorstand bedankt sich dafür, dass unsere Mitglieder uns weiterhin die Treue halten
-        und wir hoffen, bald den Sportbetrieb wieder aufnehmen zu können.<br>
-        Bis dahin, alles Gute und bleibt gesund<br>
-        Der Vorstand
+        <h3>Kölle aktiv, 02.07.2021</h3>
+        Der Stadtsportbund Köln bietet in diesem Jahr vom 01.07. bis zum 31.09.2021 wieder
+        ein für alle Kölner kostenloses Programm an. <br>
+        <br>
+        <a href="https://www.koelle-aktiv.de">
+          <img src="img/koelle_aktiv.jpg" width="100" height="100">
+        </a>
+        <br>
+        <br>
+        Die Internetseite ist sehr übersichtlich aufgebaut und bietet viele tolle Angebote.
+        <ul>
+        <li>Sortiert nach Bezirken (Chorweiler,Ehrenfeld,Nippes,Lindenthal usw)</li>
+        <li>Kursheft nach Wochentagen</li>
+        <li>alle Aktivitäten im Freien</li>
+        <li>keine Vereinszugehöhrigkeit nötig</li>
+        <li>keine Anmeldung nötig</li>
+        <li>Standortbeschreibung mit Google Maps hinterlegt.</li>
+        </ul>
+        Also Angebot aussuchen, hingehen, mitmachen und Spass haben.
+        Wir freuen uns, wenn es nach den Ferien bei uns wieder richtig losgeht.
+        <br>
+        <br>
+        <h3>Wiederaufnahme Gymnastikkurse, 02.07.2021</h3>
+        Liebe Mitglieder der Gymnastik Sparte,<br>
+        seit 14 Tagen ist es uns nun wieder möglich den Sportbetrieb aufzunehmen. 
+        Wir freuen uns sehr darüber.
+        Der TuS Köln Merkenich bekommt für die Zeit der Sommerferien die Sporthalle der
+        Grundschule vom Sportamt zur Verfügung gestellt. Deshalb haben wir versucht unsere
+        Angebote in den Ferien zu ermöglichen. Leider war es so kurzfristig nicht für alle Kurse
+        möglich Übungsleiter zu finden,wir können anbieten: <br>
+        <br>
+        Dienstag :  16:15 bis 17:15      Eltern / Kind Turnen<br>
+        Dienstag :  17:15 bis 18:30      Eltern / Kind Turnen<br>
+        Mittwoch :  18:30 bis 19:30  Damengymnastik <br>
+        Mittwoch :  19:30 bis 20:30  Damengymnastik <br>
+        <br>
+        Die Gymnastikkurse können nur bei ausreichender Nachfrage über den gesamten Zeitraum
+        angeboten werden.
+        <br>
+        <br>
         <h3>SPORT@Home</h3>
         Für alle die auch in den aktuellen Zeiten aktiv mit anderen bleiben möchten,
 bietet die Initiative von fit.Koeln momentan ein tollen gratis Angebot für jederman. <br>
@@ -44,16 +70,6 @@ Informationen findet ihr unter <a href="https://www.fit-koeln.de">fit.koeln</a>.
         <a href="https://www.fit-koeln.de">
           <img src="img/fitkoeln.png" width="200">
         </a>
-        <h3>Kölle aktiv</h3>
-        Nach der Teilnahme im Jahr 2020, werden wir aller Vorraussicht nach auch im
-kommenden Jahr bei dieser schönen Initiative teilnehmen. Weitere Infos findet ihr unter:
-        <br>
-        <a href="https://www.koelle-aktiv.de">
-          <img src="img/koelle_aktiv.jpg" width="100" height="100">
-        </a>
-        <br> 
-        <br>
-        <br>
         <h3>Arbeiten an der Delfin</h3>
         Die Vereinsmitglieder der Delfin waren dieses Jahr schon aktiv und haben eine neue
 Holzleiste angebracht. Hier geht es weiter zur Bildergalerie <a
