Ankuendigung Yoga Kurs

--- a/default.html
+++ b/default.html
@@ -22,6 +22,27 @@
     <section>
       <h1 class="w3-wide w3-center"> Aktuelles</h1>
       <p class="w3-opacity"> 
+        <h3>Endlich wieder Sport! Yoga-Kurs beim TuS, 17.08.2021</h3>
+        Liebe Vereinsmitglieder,
+        die aktuelle Lage zur Pandemie gibt uns Hoffnung das wir nach den Ferien unsern
+        Sportbetrieb wieder ohne große Einschränkungen aufnehmen können.  Daher möchten wir unsere
+        Ankündigung umsetzen und unseren Erwachsenen Mitglieder die im Jahr 2020 Ihren Beitrag
+        gezahlt haben einen <b>Yoga-Kurs</b> anbieten.  Der Kurs beginnt am Donnerstag den
+        <b>02.09.2021 von 18:30 bis 20:00 Uhr</b>
+        und findet in der Merkenicher Sporthalle statt. Er endet am
+        <b>16.12.2021</b> und findet in den Ferien nicht statt. Der Kurs ist für Anfänger und Teilnehmer
+        mit Grundkenntnissen geeignet. <br>
+        Um den Kurs planen zu können möchten wir euch bitten sich
+        bei unserer Spartenleiterin für Gymnastik Anita Lenarz zu melden. <b>Tel.
+        0221-705774 </b>.<br>
+        Der Kurs steht <b>auch Nichtmitgliedern</b> offen.
+        Die Anmeldegebühr beträgt <b>60,- Euro</b> für
+        Auszubildende, Studenten und Schüler mit einem Nachweis, 60,- Euro für
+        Lebenspartner von Mitgliedern und 100,- Euro für Nichtmitglieder. Der
+        <b>Anmeldeschluss ist der 26.08.2021</b>.<br><br>
+        Allen sportbegeisterten wünschen wir alles gute für
+        den Rest des Jahres. <br>
+        Ihr Vereinsvorstand
         <h3>Kölle aktiv, 02.07.2021</h3>
         Der Stadtsportbund Köln bietet in diesem Jahr vom 01.07. bis zum 31.09.2021 wieder
         ein für alle Kölner kostenloses Programm an. <br>
